--- a/LoginApp/Base.lproj/Main.storyboard
+++ b/LoginApp/Base.lproj/Main.storyboard
@@ -26,6 +26,7 @@
                                 </state>
                                 <connections>
                                     <action selector="logInButtonPressed" destination="BYZ-38-t0r" eventType="touchUpInside" id="pGB-Bo-U4d"/>
+                                    <segue destination="jTA-jO-88q" kind="presentation" identifier="seque" modalPresentationStyle="fullScreen" id="f3H-Yf-6UG"/>
                                 </connections>
                             </button>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="3Iu-YI-Wel">
@@ -92,6 +93,62 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="46.376811594202906" y="-2.6785714285714284"/>
+        </scene>
+        <!--Welcome View Controller-->
+        <scene sceneID="Lsj-YT-cBA">
+            <objects>
+                <viewController id="jTA-jO-88q" customClass="WelcomeViewController" customModule="LoginApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="baC-86-Tao">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bKP-HF-w8p">
+                                <rect key="frame" x="173" y="701" width="68" height="35"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="Log Out"/>
+                                <connections>
+                                    <action selector="logOut:" destination="jTA-jO-88q" eventType="touchUpInside" id="mvm-3P-nqE"/>
+                                    <segue destination="qsS-MW-7oU" kind="unwind" unwindAction="unwindFor:" id="Xfb-L3-gFa"/>
+                                </connections>
+                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="32" translatesAutoresizingMaskIntoConstraints="NO" id="cSx-BH-3V7">
+                                <rect key="frame" x="92" y="200" width="230.5" height="113.5"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome, somebody!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f5f-yI-0np">
+                                        <rect key="frame" x="0.0" y="0.0" width="230.5" height="27.5"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="23"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="hi" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GBv-Fg-QHx">
+                                        <rect key="frame" x="98" y="59.5" width="34.5" height="54"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="45"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="a0q-LY-BNf"/>
+                        <color key="backgroundColor" red="0.6097436018970066" green="0.56751222363612586" blue="0.66666668653488159" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="a0q-LY-BNf" firstAttribute="bottom" secondItem="bKP-HF-w8p" secondAttribute="bottom" constant="126" id="GNz-Qg-j2X"/>
+                            <constraint firstItem="bKP-HF-w8p" firstAttribute="centerX" secondItem="baC-86-Tao" secondAttribute="centerX" id="HEK-qM-BtY"/>
+                            <constraint firstItem="cSx-BH-3V7" firstAttribute="centerX" secondItem="baC-86-Tao" secondAttribute="centerX" id="cLV-84-CGb"/>
+                            <constraint firstItem="cSx-BH-3V7" firstAttribute="top" secondItem="a0q-LY-BNf" secondAttribute="top" constant="152" id="l0I-qb-NxT"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="hiLabel" destination="GBv-Fg-QHx" id="hBY-rq-SOX"/>
+                        <outlet property="welcomeLabel" destination="f5f-yI-0np" id="hxI-kE-aL8"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="OzB-dD-rah" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <exit id="qsS-MW-7oU" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="755.60747663551399" y="-3.8876889848812097"/>
         </scene>
     </scenes>
     <resources>
