--- a/LoginApp/Storyboard/Base.lproj/Main.storyboard
+++ b/LoginApp/Storyboard/Base.lproj/Main.storyboard
@@ -324,10 +324,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="48" translatesAutoresizingMaskIntoConstraints="NO" id="uze-w7-pza">
-                                <rect key="frame" x="74" y="118" width="172" height="210.5"/>
+                                <rect key="frame" x="51" y="118" width="218" height="210.5"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="aYB-tr-aW4">
-                                        <rect key="frame" x="0.0" y="0.0" width="172" height="128"/>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="nature" translatesAutoresizingMaskIntoConstraints="NO" id="aYB-tr-aW4">
+                                        <rect key="frame" x="0.0" y="0.0" width="218" height="162.5"/>
                                         <color key="backgroundColor" red="0.91976243260000001" green="0.68174964410000005" blue="0.77341791569999996" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <color key="tintColor" red="0.91976243260000001" green="0.50398551540000003" blue="0.77887534020000004" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <constraints>
@@ -335,7 +335,7 @@
                                         </constraints>
                                     </imageView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JHA-y4-8Ar">
-                                        <rect key="frame" x="52.5" y="176" width="67.5" height="34.5"/>
+                                        <rect key="frame" x="75.5" y="210.5" width="67.5" height="0.0"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="filled" title="NEXT" cornerStyle="large">
                                             <backgroundConfiguration key="background"/>
@@ -420,6 +420,7 @@
         <image name="heart.fill" catalog="system" width="128" height="107"/>
         <image name="house.fill" catalog="system" width="128" height="104"/>
         <image name="me" width="768" height="1024"/>
+        <image name="nature" width="768" height="1024"/>
         <image name="person.fill" catalog="system" width="128" height="120"/>
         <systemColor name="labelColor">
             <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
