--- a/LoginApp/Storyboard/Base.lproj/Main.storyboard
+++ b/LoginApp/Storyboard/Base.lproj/Main.storyboard
@@ -323,19 +323,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JHA-y4-8Ar">
-                                <rect key="frame" x="85" y="287.5" width="150" height="34.5"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="filled" title="NEXT" cornerStyle="large">
-                                    <backgroundConfiguration key="background"/>
-                                    <color key="baseBackgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                </buttonConfiguration>
-                                <connections>
-                                    <action selector="nextButtonPressed:" destination="GLZ-8h-qrg" eventType="touchUpInside" id="vjU-bg-WuB"/>
-                                </connections>
-                            </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="nature" translatesAutoresizingMaskIntoConstraints="NO" id="aYB-tr-aW4">
-                                <rect key="frame" x="41" y="73" width="238" height="181"/>
+                                <rect key="frame" x="41" y="193.5" width="238" height="181"/>
                                 <color key="backgroundColor" red="0.91976243260000001" green="0.68174964410000005" blue="0.77341791569999996" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <color key="tintColor" red="0.91976243260000001" green="0.50398551540000003" blue="0.77887534020000004" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
@@ -347,12 +336,8 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="aYB-tr-aW4" firstAttribute="centerX" secondItem="W6e-Bl-To7" secondAttribute="centerX" id="8TC-wp-W2L"/>
-                            <constraint firstItem="aYB-tr-aW4" firstAttribute="top" secondItem="1UL-wa-d6T" secondAttribute="top" constant="73" id="FVG-V2-3gA"/>
-                            <constraint firstItem="JHA-y4-8Ar" firstAttribute="top" secondItem="aYB-tr-aW4" secondAttribute="bottom" constant="33.5" id="TVc-oZ-HQG"/>
                             <constraint firstItem="aYB-tr-aW4" firstAttribute="height" secondItem="W6e-Bl-To7" secondAttribute="height" multiplier="0.318662" id="TyW-7X-vug"/>
-                            <constraint firstItem="1UL-wa-d6T" firstAttribute="trailing" secondItem="JHA-y4-8Ar" secondAttribute="trailing" constant="85" id="dsR-jq-iZ4"/>
-                            <constraint firstItem="JHA-y4-8Ar" firstAttribute="height" secondItem="W6e-Bl-To7" secondAttribute="height" multiplier="0.0607394" id="eSL-FK-BZ7"/>
-                            <constraint firstItem="JHA-y4-8Ar" firstAttribute="leading" secondItem="1UL-wa-d6T" secondAttribute="leading" constant="85" id="w8a-WH-lWz"/>
+                            <constraint firstItem="aYB-tr-aW4" firstAttribute="centerY" secondItem="W6e-Bl-To7" secondAttribute="centerY" id="fMt-Bd-9Dj"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="" image="heart.fill" catalog="system" id="7Pz-MI-VPW"/>
